crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-cayenne[file]_tpcds_q34.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q34"
---
+-------------+--------------+--------------+-----------------------+------------------+-----+
| c_last_name | c_first_name | c_salutation | c_preferred_cust_flag | ss_ticket_number | cnt |
+-------------+--------------+--------------+-----------------------+------------------+-----+
| Acosta      | Victor       | Mr.          | N                     | 156807           | 15  |
| Adams       | Willie       | Sir          | N                     | 88285            | 15  |
| Alston      | Jesus        | Sir          | Y                     | 52608            | 15  |
| Anderson    | Chad         | Dr.          | Y                     | 56316            | 15  |
| Anderson    | Charlotte    | Ms.          | N                     | 33001            | 15  |
| Anderson    | Kari         | Miss         | Y                     | 78089            | 15  |
| Anderson    | Norma        | Miss         | Y                     | 132983           | 16  |
| Andrews     | Cindy        | Miss         | Y                     | 132595           | 16  |
| Andrews     | Robert       | Sir          | Y                     | 30467            | 15  |
| Appleton    | Ivan         | Dr.          | Y                     | 74586            | 15  |
+-------------+--------------+--------------+-----------------------+------------------+-----+
