crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-cayenne[file]_tpcds_q70.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q70"
---
+---------------+---------+-------------------+--------------+--------------------+
| total_sum     | s_state | s_county          | lochierarchy | rank_within_parent |
+---------------+---------+-------------------+--------------+--------------------+
| -442950476.62 |         |                   | 2            | 1                  |
| -442950476.62 | TN      |                   | 1            | 1                  |
| -442950476.62 | TN      | Williamson County | 0            | 1                  |
+---------------+---------+-------------------+--------------+--------------------+
