crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-cayenne[file]_tpcds_q96.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q96"
---
+----------+
| count(*) |
+----------+
| 949      |
+----------+
