crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q12.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q12"
---
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
| i_item_id        | i_item_desc                                                                                                                                                                                          | i_category | i_class | i_current_price | itemrevenue | revenueratio |
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
| AAAAAAAAAKLBAAAA | Assets might operate there local, sophisticated investors; poets should not get well domestic, sorry disputes. Voluntary bedrooms make at least professional states. Later vi                        | Books      | arts    | 1.54            | 2046.15     | 2.799139     |
| AAAAAAAABFHDAAAA | Little days answer in a emotions; players touch.                                                                                                                                                     | Books      | arts    | 2.58            | 1685.60     | 2.305905     |
| AAAAAAAACCMAAAAA | Aspects remove etc right parties. Social police formulate as. Cheerful, grey profits would state crucial books;                                                                                      | Books      | arts    | 0.65            | 1028.82     | 1.407429     |
| AAAAAAAACDEEAAAA | A                                                                                                                                                                                                    | Books      | arts    | 4.97            | 6677.24     | 9.134482     |
| AAAAAAAACMIDAAAA | Very                                                                                                                                                                                                 | Books      | arts    | 5.87            | 2942.56     | 4.025430     |
| AAAAAAAADCCDAAAA | Glad users understand very almost original jobs. Towns can understand. Supreme, following days work by a parents; german, crucial weapons work sure; fair pictur                                     | Books      | arts    | 7.18            | 4299.24     | 5.881372     |
| AAAAAAAADPCCAAAA | Especially true items might supply particularly. Black, automatic words might develop post-war problems. Fresh, visible workers could not appe                                                       | Books      | arts    | 4.23            | 6855.75     | 9.378685     |
| AAAAAAAAEAEAAAAA | Communications grab as. Never new minutes release unfair occ                                                                                                                                         | Books      | arts    | 1.09            | 4818.66     | 6.591940     |
| AAAAAAAAFBMBAAAA | Years light glasses. Contemporary members might detect even drawings. Private instructions ought to expect well main streets. Children will say well; usually young members ought to ensure enough.  | Books      | arts    | 4.78            | 10652.60    | 14.572786    |
| AAAAAAAAFCKCAAAA | Brilliant, acceptable resources might not pick as. Positive, married parties support only strongly impossible needs. Photogra                                                                        | Books      | arts    | 2.44            | 4100.31     | 5.609235     |
+------------------+------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+---------+-----------------+-------------+--------------+
