crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q15.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q15"
---
+--------+-----------------------------------+
| ca_zip | sum(catalog_sales.cs_sales_price) |
+--------+-----------------------------------+
| 30059  | 1804.74                           |
| 30069  | 2369.38                           |
| 30150  | 1400.48                           |
| 30162  | 2619.86                           |
| 30169  | 1445.85                           |
| 30191  | 1278.64                           |
| 30194  | 643.69                            |
| 30399  | 698.31                            |
| 30499  | 440.10                            |
| 30534  | 976.96                            |
+--------+-----------------------------------+
